# powerline-segment

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
