[build-system]
requires = [
    "setuptools>=45",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name='powerlinecust-segments'
version="0.1.0"
description='Powerline Custom Segments'
readme='README.md'
requires-python = ">=3.9"
authors = [{ name = "Avijit Pal" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["powerline", "memory", "pyenv", "jenv", "docker"]
dependencies=["psutil", "powerline-status>=2.7" ]

[project.optional-dependencies]
dev = ["twine", "build", "pip-tools"]

[project.urls]
Homepage = "https://github.com/avijitpal9/powerlinecust-segments"

# [tool.setuptools.packages.find]
# where=["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
